index.html update 01 and README.md update 03 - typos

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h3 id="dataStructure">Creating and handling a data structure</h3>
                         <p>Application code organization follows Revealing Module Pattern, all variables and methods are stored in hashes</p>
                         <p>All questions are stored in an array. Each question with its options and correct answer index is stored in an object</p>
-                        <p>This objects are accessed by application methods in order to create quiz functionalities</p>
+                        <p>These objects are accessed by application methods in order to create quiz functionalities</p>
                         <p>You might want to review :</p>	
                         <ul>
                             <li>quiz/math_quiz.json file</li>
